fix not centered images

--- a/src/events/components/eventImage.less
+++ b/src/events/components/eventImage.less
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   height: 100%;
+  min-height: 220px;
 
   svg {
     opacity: 0.3;
